Edicion iconos y colores cards

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -53,7 +53,7 @@ The above copyright notice and this permission notice shall be included in all c
                         <div class="card card-stats">
                             <div class="card-header card-header-success card-header-icon">
                                 <div class="card-icon">
-                                    <i class="material-icons">settings_power</i>
+                                    <i class="material-icons">power</i>
                                 </div>
                                 <p class="card-category">Dispositivos encendidos</p>
                                 <h3 class="card-title" id="DevicesOn"></h3> <!-- BD DATA-->
@@ -65,9 +65,9 @@ The above copyright notice and this permission notice shall be included in all c
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="card card-stats">
-                            <div class="card-header card-header-success card-header-icon">
+                            <div class="card-header card-header-danger card-header-icon">
                                 <div class="card-icon">
-                                    <i class="material-icons">settings_power</i>
+                                    <i class="material-icons">power_off</i>
                                 </div>
                                 <p class="card-category">Dispositivos apagados</p>
                                 <h3 class="card-title" id="DevicesOff"></h3> <!-- BD DATA-->
@@ -81,9 +81,9 @@ The above copyright notice and this permission notice shall be included in all c
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="card card-stats">
-                            <div class="card-header card-header-danger card-header-icon">
+                            <div class="card-header card-header-success card-header-icon">
                                 <div class="card-icon">
-                                    <i class="material-icons">info_outline</i>
+                                    <i class="material-icons">tv</i>
                                 </div>
                                 <p class="card-category">Televisiones encendidas</p>
                                 <h3 class="card-title" id="HdmiOn"></h3>
@@ -97,9 +97,9 @@ The above copyright notice and this permission notice shall be included in all c
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="card card-stats">
-                            <div class="card-header card-header-info card-header-icon">
+                            <div class="card-header card-header-danger card-header-icon">
                                 <div class="card-icon">
-                                    <i class="fa fa-twitter"></i>
+                                    <i class="material-icons">tv_off</i>
                                 </div>
                                 <p class="card-category">Televisiones apagadas</p>
                                 <h3 class="card-title" id="HdmiOff"></h3>
