Actualizacion tabla y datos disposivos

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -471,7 +471,7 @@ The above copyright notice and this permission notice shall be included in all c
         $.ajax({
             type: 'POST',
             data: {
-                Option: 'DevicesList'
+                Option: 'DeviceList'
             },
             url: SourceControllers + 'DevicesStatus.php',
             success: function (response) {
