Actualizacion script href en template

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -29,9 +29,6 @@ The above copyright notice and this permission notice shall be included in all c
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link href="../assets/demo/demo.css" rel="stylesheet" />
 
-    <!-- Datatables -->
-    <link rel="stylesheet" type="text/css" href="../../../Libraries/DataTables/datatables.min.css"/>
-    <script type="text/javascript" src="../../../Libraries/DataTables/datatables.min.js"></script>
 </head>
 
 <body class="">
@@ -146,7 +143,7 @@ The above copyright notice and this permission notice shall be included in all c
                             <div class="card-body">
                                 <div class="tab-content">
                                     <div class="tab-pane active" id="profile">
-                                        <table id="DevicesList" class="ui celled table"></table>
+                                        <table id="DevicesList" class="ui celled table" style="width:100%"></table>
                                     </div>
                                     <div class="tab-pane" id="messages">
 
@@ -260,6 +257,9 @@ The above copyright notice and this permission notice shall be included in all c
 <!-- Material Dashboard DEMO methods, don't include it in your project! -->
 <script src="../assets/demo/demo.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+<!-- Datatables -->
+<link rel="stylesheet" type="text/css" href="../../../Libraries/DataTables/datatables.min.css"/>
+<script type="text/javascript" src="../../../Libraries/DataTables/datatables.min.js"></script>
 <script>
     $(document).ready(function() {
         $().ready(function() {
