--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -258,8 +258,9 @@ The above copyright notice and this permission notice shall be included in all c
 <script src="../assets/demo/demo.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 <!-- Datatables -->
-<link rel="stylesheet" type="text/css" href="../../../Libraries/DataTables/datatables.min.css"/>
-<script type="text/javascript" src="../../../Libraries/DataTables/datatables.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../assets/DataTables/datatables.min.css"/>
+<script type="text/javascript" src="../assets/DataTables/datatables.min.js"></script>
+
 <script>
     $(document).ready(function() {
         $().ready(function() {
