Actualizacion tabla html

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -140,10 +140,11 @@ The above copyright notice and this permission notice shall be included in all c
                                     </div>
                                 </div>
                             </div>
+                            <table id="DevicesList" style="width:100%"></table>
                             <div class="card-body">
                                 <div class="tab-content">
                                     <div class="tab-pane active" id="profile">
-                                        <table id="DevicesList" class="ui celled table" style="width:100%"></table>
+                                        <!--table id="DevicesList" class="ui celled table" style="width:100%"></table-->
                                     </div>
                                     <div class="tab-pane" id="messages">
 
