--- a/Views/Layouts/Contents/assets/DataTables/datatables.css
+++ b/Views/Layouts/Contents/assets/DataTables/datatables.css
@@ -39,17 +39,20 @@ table.dataTable.table thead td.sorting_desc:after {
 }
 table.dataTable.table thead th.sorting:after,
 table.dataTable.table thead td.sorting:after {
-  content: "";
+  /*content: "";*/
+  content: "\2193";
   color: #ddd;
   font-size: 0.8em;
 }
 table.dataTable.table thead th.sorting_asc:after,
 table.dataTable.table thead td.sorting_asc:after {
-  content: "";
+  /*content: "";*/
+  content: "\2191";
 }
 table.dataTable.table thead th.sorting_desc:after,
 table.dataTable.table thead td.sorting_desc:after {
-  content: "";
+  /*content: "";*/
+  content: "\2193";
 }
 table.dataTable.table td,
 table.dataTable.table th {
