Prueba para agregar iconos a la tabla

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -30,7 +30,11 @@ The above copyright notice and this permission notice shall be included in all c
     <link href="../assets/demo/demo.css" rel="stylesheet" />
 
 </head>
-
+<style>
+    .StatusOn{
+        color: forestgreen;
+    }
+</style>
 <body class="">
 <div class="wrapper ">
     <div class="main-panel">
@@ -120,7 +124,7 @@ The above copyright notice and this permission notice shall be included in all c
                                         <ul class="nav nav-tabs" data-tabs="tabs">
                                             <li class="nav-item">
                                                 <a class="nav-link active" href="#profile" data-toggle="tab">
-                                                    <i class="material-icons">bug_report</i> Bugs
+                                                    <i class="material-icons">dns</i> Todos los dispositivos
                                                     <div class="ripple-container"></div>
                                                 </a>
                                             </li>
