Agregar iconos a la tabla con coles

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -32,7 +32,11 @@ The above copyright notice and this permission notice shall be included in all c
 </head>
 <style>
     .StatusOn{
-        color: forestgreen;
+        color: #9ac96b;
+    }
+
+    .StatusOff{
+        color: #e18888;
     }
 </style>
 <body class="">
