Correcion nombre campo ultima ejecion

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -33,10 +33,12 @@ The above copyright notice and this permission notice shall be included in all c
 <style>
     .StatusOn{
         color: #9ac96b;
+        text-align: center;
     }
 
     .StatusOff{
         color: #e18888;
+        text-align: center;
     }
 </style>
 <body class="">
