--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -126,7 +126,7 @@ The above copyright notice and this permission notice shall be included in all c
                             <div class="card-header card-header-tabs card-header-primary">
                                 <div class="nav-tabs-navigation">
                                     <div class="nav-tabs-wrapper">
-                                        <span class="nav-tabs-title">Tasks:</span>
+                                        <span class="nav-tabs-title">Listas:</span>
                                         <ul class="nav nav-tabs" data-tabs="tabs">
                                             <li class="nav-item">
                                                 <a class="nav-link active" href="#profile" data-toggle="tab">
@@ -134,7 +134,7 @@ The above copyright notice and this permission notice shall be included in all c
                                                     <div class="ripple-container"></div>
                                                 </a>
                                             </li>
-                                            <li class="nav-item">
+                                            <!--li class="nav-item">
                                                 <a class="nav-link" href="#messages" data-toggle="tab">
                                                     <i class="material-icons">code</i> Website
                                                     <div class="ripple-container"></div>
@@ -145,7 +145,7 @@ The above copyright notice and this permission notice shall be included in all c
                                                     <i class="material-icons">cloud</i> Server
                                                     <div class="ripple-container"></div>
                                                 </a>
-                                            </li>
+                                            </li-->
                                         </ul>
                                     </div>
                                 </div>
@@ -493,6 +493,7 @@ The above copyright notice and this permission notice shall be included in all c
                     data: DevicesList,
                     columns: [
                         { title: 'Id' },
+                        { title: 'Codigo locación' },
                         { title: 'Ip' },
                         { title: 'Mac address' },
                         { title: 'Modelo' },
