--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -88,7 +88,7 @@ The above copyright notice and this permission notice shall be included in all c
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="card card-stats">
-                            <div class="card-header card-header-success card-header-icon">
+                            <div class="card-header card-header-primary card-header-icon">
                                 <div class="card-icon">
                                     <i class="material-icons">tv</i>
                                 </div>
@@ -104,7 +104,7 @@ The above copyright notice and this permission notice shall be included in all c
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="card card-stats">
-                            <div class="card-header card-header-danger card-header-icon">
+                            <div class="card-header card-header-warning card-header-icon">
                                 <div class="card-icon">
                                     <i class="material-icons">tv_off</i>
                                 </div>
@@ -487,6 +487,8 @@ The above copyright notice and this permission notice shall be included in all c
             async: false,
             url: SourceControllers + 'DevicesStatus.php',
             success: function (response) {
+                console.log(response);
+
                 DevicesList = $.parseJSON(response.DeviceList);
                 DeviceInfoList = $.parseJSON(response.DeviceInfoList);
 
