Prueba card para STB

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -166,18 +166,24 @@ The above copyright notice and this permission notice shall be included in all c
                         </div>
                     </div>
 
-                    <div class="col-sm-4">
-                        <div class="card card-chart">
-                            <div class="card-header card-header-info">
+                    <div class="col-md-4">
+                        <div class="card card-profile">
+                            <div class="card-avatar">
+                                <a href="javascript:;">
+                                    <img class="img" src="../assets/img/">
+                                </a>
                             </div>
                             <div class="card-body">
-                                <h4 class="card-title">Email Subscriptions</h4>
-                                <p class="card-category">Last Campaign Performance</p>
-                            </div>
-                            <div class="card-footer">
+                                <h6 class="card-category text-gray">00:02:02:4f:9b:af</h6>
+                                <h4 class="card-title">10.30.0.15</h4>
+                                <p class="card-description">SISTEMAS</p>
                                 <div class="stats">
-                                    <i class="material-icons">access_time</i> campaign sent 2 days ago
+                                    <i class="material-icons">access_time</i> 2021-04-05 05:27:15
+                                    <div class="stats">
+                                        <i class="material-icons">calendar</i> 2021-04-05
+                                    </div>
                                 </div>
+                                <a href="javascript:;" class="btn btn-primary btn-round">Reboot</a>
                             </div>
                         </div>
                     </div>
