Actualizacion card e imagenes

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -170,7 +170,7 @@ The above copyright notice and this permission notice shall be included in all c
                         <div class="card card-profile">
                             <div class="card-avatar">
                                 <a href="javascript:;">
-                                    <img class="img" src="../assets/img/">
+                                    <img class="img" src="../assets/img/A540.png">
                                 </a>
                             </div>
                             <div class="card-body">
@@ -179,9 +179,9 @@ The above copyright notice and this permission notice shall be included in all c
                                 <p class="card-description">SISTEMAS</p>
                                 <div class="stats">
                                     <i class="material-icons">access_time</i> 2021-04-05 05:27:15
-                                    <div class="stats">
-                                        <i class="material-icons">calendar</i> 2021-04-05
-                                    </div>
+                                </div>
+                                <div class="stats">
+                                    <i class="material-icons">calendar</i> 2021-04-05
                                 </div>
                                 <a href="javascript:;" class="btn btn-primary btn-round">Reboot</a>
                             </div>
